@@ -12,4 +12,5 @@ BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):
 005 ==> 303385 - Crash on startup.
 006 ==> 303396 - Assign tags to filtered images - not all images.
 007 ==> 301486 - additional empty queue when batch processing images using toolbar button.
-008 ==> 
+008 ==> 301530 - Group images by time puts multiple images in a progress queue, which never complete.
+009 ==> 
